# A1_tensor

./: .gitignore  main.py  pyproject.toml  test_shelter_api.py
data/: dataset.yaml
src/: alert_system.py  event_logger.py  rest_area_service.py
